// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect component should render correctly with all the props given 1`] = `
.c7 {
  top: 50%;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  pointer-events: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
  z-index: 1;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c15 {
  width: auto;
  display: inline-block;
  position: absolute;
  visibility: hidden;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
  cursor: not-allowed;
  background-color: #F7F8F9;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxhCb,
.c3 .sc-AxhUy {
  color: #546A7F;
}

.c3 .sc-AxhCb *,
.c3 .sc-AxhUy * {
  fill: #546A7F;
}

.c3 ~ .sc-AxjAm {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3::after,
.c3:hover::after {
  border-width: 0.1rem;
  border-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb,
.c3 .sc-AxhUy {
  color: #b0bcc8;
}

.c3 .sc-AxhCb *,
.c3 .sc-AxhUy * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxjAm {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  resize: none;
  z-index: 1;
  -webkit-scroll-padding-top: 10px;
  -moz-scroll-padding-top: 10px;
  -ms-scroll-padding-top: 10px;
  scroll-padding-top: 10px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c5,
.c5 ~ .sc-Axmtr {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5:disabled ~ .c6,
.c5:disabled ~ .sc-Axmtr {
  cursor: not-allowed;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) ~ .c6,
.c5:focus ~ .c6 {
  -webkit-transform: translateY(-87%) scale(0.75);
  -ms-transform: translateY(-87%) scale(0.75);
  transform: translateY(-87%) scale(0.75);
}

.c5:not(:placeholder-shown) ~ .sc-Axmtr {
  opacity: 1;
}

.c13 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
}

.c13 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c14 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c14 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border-radius: 2rem;
  padding: 0.2rem 0.5rem 0.2rem 0.9rem;
  color: #435465;
  border-color: #C7D0D8;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10:focus {
  outline: none;
}

.c10 .c12 {
  font-size: 1.2rem;
  border-radius: 50%;
  cursor: pointer;
  margin-left: 0.6rem;
}

.c10 .c12 {
  padding: 0.4rem;
  background-color: #eff2f4;
}

.c10 .c12 * {
  fill: #b0bcc8;
}

.c10 .c12:hover {
  background-color: #eff2f4;
}

.c10 .c12:hover * {
  fill: #b0bcc8;
}

.c10:hover {
  border-color: #C7D0D8;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 button {
  margin-right: 0.8rem;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 300;
  width: 100%;
  margin: 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 input {
  padding-right: 1.6rem;
}

.c0 .c8 > .c12 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c8 > .c12 * {
  fill: #13181D;
}

.c0 .c8 > .c12 * {
  fill: #b0bcc8;
}

<div>
  <div
    class="c0"
    disabled=""
    id="pharmacy-wrapper"
    placeholder="Please Select"
  >
    <div
      class="c1 c2"
      id="pharmacy-input-wrapper"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="pharmacy-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="pharmacy-input"
            placeholder="1 options selected"
            type="text"
            value="all"
          />
          <label
            class="c6 c7"
            for="pharmacy-input"
          >
            Pharmacy
          </label>
        </div>
        <div
          class="c8 c9"
          id="pharmacy-count"
        >
          <button
            class="c10"
            id="medly-options-chip"
          >
            <span
              class="c11"
            >
              1
            </span>
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              id="medly-options-chip-clear"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </button>
          <svg
            class="c12 c14"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
              fill="#000"
            />
          </svg>
        </div>
      </div>
      
      <span
        class="c15"
      >
        Pharmacy
      </span>
    </div>
  </div>
</div>
`;

exports[`MultiSelect component should render correctly with default props 1`] = `
.c7 {
  top: 50%;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  pointer-events: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
  z-index: 1;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c12 {
  width: auto;
  display: inline-block;
  position: absolute;
  visibility: hidden;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxhCb,
.c3 .sc-AxhUy {
  color: #546A7F;
}

.c3 .sc-AxhCb *,
.c3 .sc-AxhUy * {
  fill: #546A7F;
}

.c3 ~ .sc-AxjAm {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: #E7F0FF;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .sc-AxhUy,
.c3:focus-within:hover .sc-AxhUy {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .sc-AxhUy *,
.c3:focus-within:hover .sc-AxhUy * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  resize: none;
  z-index: 1;
  -webkit-scroll-padding-top: 10px;
  -moz-scroll-padding-top: 10px;
  -ms-scroll-padding-top: 10px;
  scroll-padding-top: 10px;
}

.c5,
.c5 ~ .sc-Axmtr {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5:disabled ~ .c6,
.c5:disabled ~ .sc-Axmtr {
  cursor: not-allowed;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) ~ .c6,
.c5:focus ~ .c6 {
  -webkit-transform: translateY(-87%) scale(0.75);
  -ms-transform: translateY(-87%) scale(0.75);
  transform: translateY(-87%) scale(0.75);
}

.c5:not(:placeholder-shown) ~ .sc-Axmtr {
  opacity: 1;
}

.c11 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c11 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 button {
  margin-right: 0.8rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: 25.6rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1:focus-within input {
  cursor: text;
}

.c0 .c1 input {
  padding-right: 1.6rem;
}

.c0 .c8 > .c10 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c8 > .c10 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-multiSelect-wrapper"
    placeholder="Please Select . . ."
  >
    <div
      class="c1 c2"
      id="medly-multiSelect-input-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-multiSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-multiSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-multiSelect-input"
          />
        </div>
        <div
          class="c8 c9"
          id="medly-multiSelect-count"
        >
          <svg
            class="c10 c11"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
              fill="#000"
            />
          </svg>
        </div>
      </div>
      
      <span
        class="c12"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect component should render properly with M size 1`] = `
.c12 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c12 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c15 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
}

.c17 .c19 > .c11 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c17 .c19 > .c11 * {
  fill: #13181D;
}

.c18 .c19 > .c11 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c18 .c19 > .c11 * {
  fill: #13181D;
}

.c18 .c19 > .c11 * {
  fill: #126AFA;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 > :first-child {
  margin-bottom: 0.9rem;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c16 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
  margin-left: 4rem;
  width: 100%;
  margin-left: 0;
}

.c16 > label {
  padding-left: 5rem;
}

.c10 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 .c11 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c8 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c8:checked ~ .c9 {
  border-color: #126AFA;
  background-color: #126AFA;
}

.c8:checked ~ .c9 .c11 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c8:checked ~ .c9 .c11 * {
  fill: #ffffff;
}

.c8:not(:checked) ~ .c9 {
  background-color: transparent;
  border-color: #13181D;
}

.c8:not(:disabled):focus ~ .c9 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c8:not(:disabled):focus:not(:checked) ~ .c9 {
  border-color: #126AFA;
}

.c7 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 * {
  cursor: pointer;
}

.c4:hover .c9 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #126AFA;
}

.c1 {
  border-bottom: 1px solid #dfe4e9;
  padding: 0.5rem 1.3rem;
}

.c1 .sc-fzplWN {
  padding: 0 0.3rem 0 0.9rem;
  margin: 0.2rem;
}

.c1 .sc-fzplWN .c11 {
  background-color: transparent;
  padding: 0.2rem;
}

.c1 > p {
  margin: 0.3rem;
}

.c0 {
  position: absolute;
  top: 5.6rem;
  box-shadow: 0px 2px 8px #b0bcc8;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 0.4rem;
  width: 100%;
  z-index: 1;
}

.c2 {
  list-style: none;
  padding: 0;
  margin: 0;
  max-height: 20rem;
  overflow: auto;
}

.c2 .c3 {
  width: 100%;
  margin: 0;
  padding-top: 0.7rem;
  padding-bottom: 0.7rem;
  box-sizing: border-box;
}

.c2 .c3 span {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c2 .c3:hover {
  background-color: #F7F8F9;
}

.c2 > .c3 {
  padding: 0.7rem 0 0.7rem 1.3rem;
  width: 100%;
  box-sizing: border-box;
}

.c2 > div {
  width: 100%;
  box-sizing: border-box;
}

.c2 .c13 > label {
  padding-left: 1.3rem;
}

<div
  class="c0"
  id="pharmacy-options-wrapper"
>
  <div
    class="c1"
    id="pharmacy-selected-chips"
  >
    <p>
      -
    </p>
  </div>
  <ul
    class="c2"
    id="pharmacy-options"
  >
    
    <label
      class="c3 c4"
      for="All"
      id="All-wrapper"
      sizes="[object Object]"
    >
      <span
        class="c5 c6"
        id="All-label"
        type="checkbox"
      >
        All
      </span>
      <div
        class="c7"
      >
        <input
          class="c8"
          id="All"
          name="all"
          sizes="[object Object]"
          type="checkbox"
          value="all"
        />
        <div
          class="c9 c10"
        >
          <svg
            class="c11 c12"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </div>
    </label>
    
    <label
      class="c3 c4"
      for="Dummy1"
      id="Dummy1-wrapper"
      sizes="[object Object]"
    >
      <span
        class="c5 c6"
        id="Dummy1-label"
        type="checkbox"
      >
        Dummy1
      </span>
      <div
        class="c7"
      >
        <input
          class="c8"
          id="Dummy1"
          name="Dummy1"
          sizes="[object Object]"
          type="checkbox"
          value="Dummy1"
        />
        <div
          class="c9 c10"
        >
          <svg
            class="c11 c12"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </div>
    </label>
    <div
      aria-describedby="Nested Options-helper-text"
      class="c13 c14"
      id="Nested Options-wrapper"
      type="checkbox"
    >
      
      <label
        class="c3 c4"
        for="Nested Options-select-all"
        id="Nested Options-select-all-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c15 c6"
          id="Nested Options-select-all-label"
          type="checkbox"
        >
          Nested Options
        </span>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Nested Options-select-all"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c9 c10"
          >
            <svg
              class="c11 c12"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        class="c16"
        id="Nested Options-options"
      >
        
        <label
          class="c3 c4"
          for="Dummy2-Nested Options"
          id="Dummy2-Nested Options-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c5 c6"
            id="Dummy2-Nested Options-label"
            type="checkbox"
          >
            Dummy2
          </span>
          <div
            class="c7"
          >
            <input
              class="c8"
              id="Dummy2-Nested Options"
              name="Dummy2"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c9 c10"
            >
              <svg
                class="c11 c12"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        
        <label
          class="c3 c4"
          for="Dummy3-Nested Options"
          id="Dummy3-Nested Options-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c5 c6"
            id="Dummy3-Nested Options-label"
            type="checkbox"
          >
            Dummy3
          </span>
          <div
            class="c7"
          >
            <input
              class="c8"
              id="Dummy3-Nested Options"
              name="Dummy3"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c9 c10"
            >
              <svg
                class="c11 c12"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
    </div>
  </ul>
</div>
`;

exports[`MultiSelect component should render properly with S size 1`] = `
.c12 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c12 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c15 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
}

.c17 .c19 > .c11 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c17 .c19 > .c11 * {
  fill: #13181D;
}

.c18 .c19 > .c11 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c18 .c19 > .c11 * {
  fill: #13181D;
}

.c18 .c19 > .c11 * {
  fill: #126AFA;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 > :first-child {
  margin-bottom: 0.9rem;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c16 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
  margin-left: 4rem;
  width: 100%;
  margin-left: 0;
}

.c16 > label {
  padding-left: 5rem;
}

.c10 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 .c11 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c8 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c8:checked ~ .c9 {
  border-color: #126AFA;
  background-color: #126AFA;
}

.c8:checked ~ .c9 .c11 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c8:checked ~ .c9 .c11 * {
  fill: #ffffff;
}

.c8:not(:checked) ~ .c9 {
  background-color: transparent;
  border-color: #13181D;
}

.c8:not(:disabled):focus ~ .c9 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c8:not(:disabled):focus:not(:checked) ~ .c9 {
  border-color: #126AFA;
}

.c7 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 * {
  cursor: pointer;
}

.c4:hover .c9 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #126AFA;
}

.c1 {
  border-bottom: 1px solid #dfe4e9;
  padding: 0.5rem 1.3rem;
}

.c1 .sc-fzplWN {
  padding: 0 0.3rem 0 0.9rem;
  margin: 0.2rem;
}

.c1 .sc-fzplWN .c11 {
  background-color: transparent;
  padding: 0.2rem;
}

.c1 > p {
  margin: 0.3rem;
}

.c0 {
  position: absolute;
  top: 4rem;
  box-shadow: 0px 2px 8px #b0bcc8;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 0.4rem;
  width: 100%;
  z-index: 1;
}

.c2 {
  list-style: none;
  padding: 0;
  margin: 0;
  max-height: 20rem;
  overflow: auto;
}

.c2 .c3 {
  width: 100%;
  margin: 0;
  padding-top: 0.7rem;
  padding-bottom: 0.7rem;
  box-sizing: border-box;
}

.c2 .c3 span {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c2 .c3:hover {
  background-color: #F7F8F9;
}

.c2 > .c3 {
  padding: 0.7rem 0 0.7rem 1.3rem;
  width: 100%;
  box-sizing: border-box;
}

.c2 > div {
  width: 100%;
  box-sizing: border-box;
}

.c2 .c13 > label {
  padding-left: 1.3rem;
}

<div
  class="c0"
  id="pharmacy-options-wrapper"
>
  <div
    class="c1"
    id="pharmacy-selected-chips"
  >
    <p>
      -
    </p>
  </div>
  <ul
    class="c2"
    id="pharmacy-options"
  >
    
    <label
      class="c3 c4"
      for="All"
      id="All-wrapper"
      sizes="[object Object]"
    >
      <span
        class="c5 c6"
        id="All-label"
        type="checkbox"
      >
        All
      </span>
      <div
        class="c7"
      >
        <input
          class="c8"
          id="All"
          name="all"
          sizes="[object Object]"
          type="checkbox"
          value="all"
        />
        <div
          class="c9 c10"
        >
          <svg
            class="c11 c12"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </div>
    </label>
    
    <label
      class="c3 c4"
      for="Dummy1"
      id="Dummy1-wrapper"
      sizes="[object Object]"
    >
      <span
        class="c5 c6"
        id="Dummy1-label"
        type="checkbox"
      >
        Dummy1
      </span>
      <div
        class="c7"
      >
        <input
          class="c8"
          id="Dummy1"
          name="Dummy1"
          sizes="[object Object]"
          type="checkbox"
          value="Dummy1"
        />
        <div
          class="c9 c10"
        >
          <svg
            class="c11 c12"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </div>
    </label>
    <div
      aria-describedby="Nested Options-helper-text"
      class="c13 c14"
      id="Nested Options-wrapper"
      type="checkbox"
    >
      
      <label
        class="c3 c4"
        for="Nested Options-select-all"
        id="Nested Options-select-all-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c15 c6"
          id="Nested Options-select-all-label"
          type="checkbox"
        >
          Nested Options
        </span>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Nested Options-select-all"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c9 c10"
          >
            <svg
              class="c11 c12"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        class="c16"
        id="Nested Options-options"
      >
        
        <label
          class="c3 c4"
          for="Dummy2-Nested Options"
          id="Dummy2-Nested Options-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c5 c6"
            id="Dummy2-Nested Options-label"
            type="checkbox"
          >
            Dummy2
          </span>
          <div
            class="c7"
          >
            <input
              class="c8"
              id="Dummy2-Nested Options"
              name="Dummy2"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c9 c10"
            >
              <svg
                class="c11 c12"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        
        <label
          class="c3 c4"
          for="Dummy3-Nested Options"
          id="Dummy3-Nested Options-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c5 c6"
            id="Dummy3-Nested Options-label"
            type="checkbox"
          >
            Dummy3
          </span>
          <div
            class="c7"
          >
            <input
              class="c8"
              id="Dummy3-Nested Options"
              name="Dummy3"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c9 c10"
            >
              <svg
                class="c11 c12"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
    </div>
  </ul>
</div>
`;
